--- a/cloud-github/styles/globals.css
+++ b/cloud-github/styles/globals.css
@@ -1,3 +1,8 @@
+html,
+body {
+	color-scheme: dark;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
@@ -18,6 +23,16 @@ a {
 	--background-color: #0d1117;
 	--background-hover-color: #161b22;
 	--border-selected: #f78166;
+}
+
+.bg {
+	background-color: var(--background-color) !important;
+}
+
+.markdown-body.bg .highlight pre,
+.markdown-body.bg pre {
+	background-color: var(--background-color) !important;
+	padding: 0 0 0 16px;
 }
 
 .linear-progress {
