--- a/cloud-deno/styles/github-markdown-light.css
+++ b/cloud-deno/styles/github-markdown-light.css
@@ -1,5 +1,7 @@
-// This is copied from https://github.com/sindresorhus/github-markdown-css/blob/main/github-markdown-dark.css
-// see https://sindresorhus.com/github-markdown-css for more information
+/*
+This is copied from https://github.com/sindresorhus/github-markdown-css/blob/main/github-markdown-dark.css
+see https://sindresorhus.com/github-markdown-css for more information
+*/
 
 .markdown-body {
 	-ms-text-size-adjust: 100%;
