--- a/cloud-github/styles/markdown.css
+++ b/cloud-github/styles/markdown.css
@@ -1,3 +1,8 @@
+/*
+This is copied from https://github.com/sindresorhus/github-markdown-css/blob/main/github-markdown-dark.css
+see https://sindresorhus.com/github-markdown-css for more information
+*/
+
 .markdown-body {
   color-scheme: dark;
   -ms-text-size-adjust: 100%;
